feature/Sales ui added

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -10,6 +10,10 @@
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 20px;
+    form {
+      width: 90%;
+      padding-left: 8%;
+    }
   }
   .vertical-center {
     min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
@@ -27,6 +31,10 @@
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 20px;
+    form {
+      width: 90%;
+      padding-left: 8%;
+    }
   }
   .vertical-center {
     min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
@@ -45,6 +53,10 @@
     margin: 0 auto;
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    form {
+      width: 90%;
+      padding-left: 8%;
+    }
   }
   .vertical-center {
     min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
@@ -63,6 +75,10 @@
     margin: 0 auto;
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    form {
+      width: 90%;
+      padding-left: 8%;
+    }
   }
   .vertical-center {
     min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
@@ -80,6 +96,10 @@
     margin: 0 auto;
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    form {
+      width: 90%;
+      padding-left: 8%;
+    }
   }
   .vertical-center {
     min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
