--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -20,8 +20,10 @@
       <%= render "users/index" %>
     </div>
     <div class="tab-pane fade" id="products" role="tabpanel" aria-labelledby="product-tab">
+      <%= render "products/index" %>
     </div>
     <div class="tab-pane fade" id="clients" role="tabpanel" aria-labelledby="client-tab">
+      <%= render "clients/index" %>
     </div>
   </div>
 </div>
