--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="row">
 <%= form_with(model: order, local: true) do |form| %>
   <% if order.errors.any? %>
     <div id="error_explanation">
@@ -12,36 +13,37 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :client_id %>
-    <%= form.number_field :client_id, id: :order_client_id %>
+    <%= form.label "Cliente" %>
+    <%= form.select :client_id, get_clients, { include_blank: "Select..." }, { class: "form-control col-12" } %>
   </div>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.number_field :user_id, id: :order_user_id %>
+    <%= form.label "Repartidor" %>
+    <%= form.select :user_id, get_repartidor, { include_blank: "Select..." }, { class: "form-control col-12" } %>
   </div>
 
   <div class="field">
-    <%= form.label :quantity %>
-    <%= form.text_field :quantity, id: :order_quantity %>
+    <%= form.label "Producto" %>
+    <%= form.select :product_id, get_products, { include_blank: "Select..." }, { class: "form-control col-12" } %>
   </div>
 
   <div class="field">
-    <%= form.label :product_id %>
-    <%= form.number_field :product_id, id: :order_product_id %>
+    <%= form.label "Cantidad" %>
+    <%= form.number_field :quantity, id: :order_quantity, class: "form-control col-12" %>
   </div>
 
   <div class="field">
-    <%= form.label :payment %>
-    <%= form.text_field :payment, id: :order_payment %>
+    <%= form.label "Abono" %>
+    <%= form.number_field :payment, id: :order_payment, class: "form-control col-12" %>
   </div>
 
   <div class="field">
-    <%= form.label :total %>
-    <%= form.text_field :total, id: :order_total %>
+    <%= form.label "Total" %>
+    <%= form.text_field :total, id: :order_total, class: "form-control col-12" %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Guardar", class: "btn btn-sm btn-primary form-control col-12" %>
   </div>
 <% end %>
+</div>
