--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -19,10 +19,10 @@
         <td><%= UserDecorator.new(user).fullname %></td>
         <td><%= user.email %></td>
         <td><%= user.role %></td>
-        <td><%= link_to 'Show', user_path(user), class: "btn btn-sm btn-success" %></td>
-        <td><%= link_to 'Edit', edit_user_path(user), class: "btn btn-sm btn-warning" %></td>
-        <td><%= link_to 'Destroy', user_path(user),
-                method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-danger" %></td>
+        <td><%= link_to 'Mostrar', user_path(user), class: "btn btn-sm btn-success" %></td>
+        <td><%= link_to 'Editar', edit_user_path(user), class: "btn btn-sm btn-warning" %></td>
+        <td><%= link_to 'Borrar', user_path(user),
+                method: :delete, data: { confirm: 'Está seguro de borrarlo?' }, class: "btn btn-sm btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
