--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Client</h1>
+<div class="vertical-center">
+  <div class="signInBox">
+    <div class="header">
+      <h4>Agregar Cliente</h4>
+    </div>
+    <%= render 'form', client: @client %>
+  </div>
+</div>
 
-<%= render 'form', client: @client %>
+<%= link_to 'Regresa a Settings', admin_path, class: "btn btn-sm btn-info" %>
+<div></div>
+<br>
 
-<%= link_to 'Back', clients_path %>
