--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,12 +6,7 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <div class="field">
         <%= f.label "Nombre" %><br />
-        <%= f.email_field :first_name, autofocus: true, class: "form-control" %>
-      </div>
-      <br>
-      <div class="field">
-        <%= f.label "Apellido" %><br />
-        <%= f.email_field :last_name, autofocus: true, class: "form-control" %>
+        <%= f.email_field :full_name, autofocus: true, class: "form-control" %>
       </div>
       <br>
       <div class="field">
