--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Order</h1>
-
-<%= render 'form', order: @order %>
-
-<%= link_to 'Back', orders_path %>
+<div class="vertical-center-sm">
+  <div class="signInBox">
+    <div class="header">
+      <h4>Levantar Pedido</h4>
+    </div>
+    <%= render 'form', order: @order %>
+  </div>
+</div>
+<%= link_to 'Regresar', root_path, class: "btn btn-sm btn-info" %>
+  <div></div>
+  <br>
