--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,21 +12,21 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label "Nombre:" %>
     <%= form.text_field :name, id: :product_name %>
   </div>
 
   <div class="field">
-    <%= form.label :price_unit %>
+    <%= form.label "Precio por unidad:" %>
     <%= form.text_field :price_unit, id: :product_price_unit %>
   </div>
 
   <div class="field">
-    <%= form.label :type %>
-    <%= form.text_field :type, id: :product_type %>
+    <%= form.label "Negocio al que pertenece:" %>
+    <%= form.text_field :product_type, id: :product_type %>
   </div>
-
+  <br>
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit  "Guardar", class: "btn btn-sm btn-primary" %>
   </div>
 <% end %>
