--- a/app/views/users/_form_new.html.erb
+++ b/app/views/users/_form_new.html.erb
@@ -1,12 +1,7 @@
 <%= form_with(url: create_users_path, local: true) do |f| %>
   <div class="field">
     <%= f.label "Nombre" %><br />
-    <%= f.text_field :first_name, autofocus: true, class: "form-control" %>
-  </div>
-  <br>
-  <div class="field">
-    <%= f.label "Apellido" %><br />
-    <%= f.text_field :last_name, autofocus: true, class: "form-control" %>
+    <%= f.text_field :full_name, autofocus: true, class: "form-control" %>
   </div>
   <br>
   <% if @user.id.nil? %>
