--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,5 +5,8 @@
     </div>
     <%= render "form_new" %>
   </div>
+  <%= link_to 'Regresa a Settings', admin_path, class: "btn btn-sm btn-info" %>
+  <div></div>
+  <br>
 </div>
 
