--- a/app/views/orders/_index.html.erb
+++ b/app/views/orders/_index.html.erb
@@ -1,28 +1,28 @@
 <table>
   <thead>
     <tr>
-      <th>Client</th>
-      <th>User</th>
-      <th>Quantity</th>
-      <th>Product</th>
-      <th>Payment</th>
-      <th>Total</th>
+      <th>Cliente</th>
+      <th>Repartidor</th>
+      <th>Cantidad</th>
+      <th>Producto</th>
+      <th>Abono</th>
+      <th>Total del pedido</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @orders.each do |order| %>
+    <% orders.each do |order| %>
       <tr>
-        <td><%= order.client_id %></td>
-        <td><%= order.user_id %></td>
-        <td><%= order.quantity %></td>
-        <td><%= order.product_id %></td>
-        <td><%= order.payment %></td>
+        <td><%= order.client.full_name %></td>
+        <td><%= order.user.full_name %></td>
+        <td><%= order.quantity.floor %></td>
+        <td><%= get_product_name(order.product_id) %></td>
+        <td><%= "$ #{order.payment}" %></td>
         <td><%= order.total %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Ver', order, class: "btn btn-sm btn-success" %></td>
+        <td><%= link_to 'Editar', edit_order_path(order), class: "btn btn-sm btn-warning" %></td>
+        <td><%= link_to 'Borrar', order, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
