--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,8 +15,10 @@
  */
 
 body {
-  background-color: #fd7322bd;
   margin: 0 !important;
+  background-image: url(background2.jpg);
+  background-size: cover;
+  background-position: center center;
 }
 a:visited {
   color: #ffffff;
