--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,13 +1,15 @@
 <div class="vertical-center">
-  <div class="signInBox">
-    <div class="header">
+  <div class="signInBox card">
+    <div class="header card-header">
       <h4>Agregar Cliente</h4>
     </div>
-    <%= render 'form', client: @client %>
+    <div class="card-body">
+      <%= render 'form', client: @client %>
+    </div>
+    <div class="card-footer">
+      <%= link_to 'Regresa a Settings', admin_path, class: "btn btn-sm btn-info" %>    
+    </div>
   </div>
 </div>
 
-<%= link_to 'Regresa a Settings', admin_path, class: "btn btn-sm btn-info" %>
-<div></div>
-<br>
 
