--- a/app/views/home/_index_admin.html.erb
+++ b/app/views/home/_index_admin.html.erb
@@ -1,9 +1,18 @@
 <br>
 <div class="container" style="background-color: #ffffff;">
   <br>
-  <div class="container" id="orderByDay">
-    <h3>Listado de Ventas de día de hoy</h3>
-  </div>
+  <div class="row">
+    <div class="col-lg-12" id="orderByDay">
+      <div class="row">
+        <div class="col-lg-6">      
+          <h5>Listado de Ventas de día de hoy <%= Date.today.strftime("%d/%m/%Y") %></h5>
+        </div>
+        <div class="col-lg-6">
+          <div class="btn btn-sm btn-primary">Mostrar Todas las ventas</div>
+        </div>
+      </div>      
+    </div>
+  </div>  
   <div class="container">
     <% if @orders.present? %>
       <%= render "orders/index" %>
