--- a/app/views/orders/_index.html.erb
+++ b/app/views/orders/_index.html.erb
@@ -1,29 +1,54 @@
-<table>
+<table id="orders" class="table table-striped table-bordered" style="width:100%">
   <thead>
     <tr>
-      <th>Client</th>
-      <th>User</th>
-      <th>Quantity</th>
-      <th>Product</th>
-      <th>Payment</th>
+      <th>Fecha</th>
+      <th>Cliente</th>
+      <th>Repartidor</th>
+      <th>Cantidad</th>
+      <th>Producto</th>
+      <th>Abono</th>
       <th>Total</th>
-      <th colspan="3"></th>
+      <th></th>
+      <th></th>      
     </tr>
   </thead>
 
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-        <td><%= order.client_id %></td>
-        <td><%= order.user_id %></td>
+        <td><%= order.created_at.strftime("%d/%m/%Y") %></td>
+        <td><%= order.client.full_name %></td>
+        <td><%= order.user.full_name %></td>
         <td><%= order.quantity %></td>
-        <td><%= order.product_id %></td>
+        <td><%= get_product_name(order.product_id) %></td>
         <td><%= order.payment %></td>
-        <td><%= order.total %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= number_to_currency(order.total) %></td>        
+        <td><%= link_to 'Editar', edit_order_path(order), class:"btn btn-sm btn-warning" %></td>
+        <td><%= link_to 'Borrar', order, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
+  <tfoot>
+    <tr>
+      <th>Fecha</th>
+      <th>Cliente</th>
+      <th>Repartidor</th>
+      <th>Cantidad</th>
+      <th>Producto</th>
+      <th>Abono</th>
+      <th>Total</th>
+      <th></th>
+      <th></th>      
+    </tr>
+  </tfoot>
 </table>
+<script>
+$(document).ready( function () {
+    $('#orders').DataTable({
+        dom: 'Bfrtip',
+        buttons: [
+            'copy', 'excel', 'print'
+        ]
+    });
+} );
+</script>
