feature/reports module

--- a/app/views/home/_index_admin.html.erb
+++ b/app/views/home/_index_admin.html.erb
@@ -8,7 +8,7 @@
           <h5>Listado de Ventas de día de hoy <%= Date.today.strftime("%d/%m/%Y") %></h5>
         </div>
         <div class="col-lg-6">
-          <div class="btn btn-sm btn-primary">Mostrar Todas las ventas</div>
+          <%= link_to "Mostar Todas los Pedidos", reports_path, class: "btn btn-sm btn-primary" %>          
         </div>
       </div>      
     </div>
