--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,9 +12,9 @@
     <span class="navbar-text">
       <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <% if current_user.role == "Admin" %>
+        <% if current_user.role == "admin" %>
           <li class="nav-item">
-            <%= link_to("Reportes", "#", class: "nav-link inline") %>
+            <%= link_to("Reportes", "/reports", class: "nav-link inline") %>
           </li>
           <li class="nav-item">
             <%= link_to("Settings", "/admin", class: "nav-link inline") %>
