--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -15,17 +15,17 @@
 
       <div class="field">
         <%= form.label "Cliente" %>
-        <%= form.select :client_id, get_clients, { include_blank: "Select..." }, { class: "form-control col-12" } %>
+        <%= form.select :client_id, get_clients, { include_blank: "Seleccione..." }, { class: "form-control col-12" } %>
       </div>    
 
       <div class="field">
         <%= form.label "Repartidor" %>
-        <%= form.select :user_id, get_repartidor, { include_blank: "Select..." }, { class: "form-control col-12" } %>
+        <%= form.select :user_id, get_repartidor, { include_blank: "Seleccione..." }, { class: "form-control col-12" } %>
       </div>    
 
       <div class="field">
         <%= form.label "Producto" %>
-        <%= form.select :product_id, get_products, { include_blank: "Select..." }, { class: "form-control col-12", id: "select-product" } %>
+        <%= form.select :product_id, get_products, { include_blank: "Seleccione..." }, { class: "form-control col-12", id: "select-product" } %>
       </div>
         <%= hidden_field_tag 'product-price' %>
       <div class="field">
@@ -44,7 +44,7 @@
       </div>    
 
       <div class="actions">
-        <%= form.submit "Guardar", class: "btn btn-sm btn-primary form-control col-12" %>
+        <%= form.submit "Guardar", class: "btn btn-sm btn-primary form-control col-12", data: { confirm: 'Está seguro de hacer el pedido?' } %>
       </div>
     <% end %>
   </div>
