--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#2e5886;font-family: 'Architects Daughter', cursive;">
   <a class="navbar-brand app-title" href="/">
-    <%= image_tag("home.jpg", class: "d-inline-block align-top", html: { alt: "", height: "30", width: "30" }) %>    
+    <%= image_tag("home.png", class: "d-inline-block align-top", html: { alt: "", height: "30", width: "30" }) %>    
     EspiApp
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
