--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -86,6 +86,10 @@ label {
   display: block;
 }
 
+.w-30 {
+  width: 30px;
+  height: 30px;
+}
 // Devise Customs
 // Extra large devices (large desktops, 1200px and up)
 .header {
